fix(Card): overlay bleeds to edges on a table in a card
ISSUES CLOSED: #1046

--- a/terminus-ui/src/card/card.component.scss
+++ b/terminus-ui/src/card/card.component.scss
@@ -158,3 +158,12 @@
   }
 }
 
+// Hack for managing overlay when a table is nested in a card
+.c-card__inner {
+  .ts-table ~ .ts-loading-overlay {
+    .c-loading-overlay {
+      left: -24px;
+      right: -24px;
+    }
+  }
+}
